# Avatar

./: .gitignore  =0.9.2  README.md  app.py  config.py  config.yaml  download_weights.sh  ignore_list.txt  main.py  musetalk_avatar_pipeline.py  pyproject.toml  run.py  run_musetalk_avatar.py  setup_mmlab.sh  tts_kokoro.py
avatar/: llm.py  pipeline.py  server.py
musetalk/utils/: audio_processor.py  enhancer.py
scripts/: inference.py
