[project]
name = "musetalk-liveavatar"
version = "0.1.0"
description = "MuseTalk Live Avatar Pipeline"
requires-python = ">=3.10,<3.11"
dependencies = [
    # pinned early — tensorflow/gradio will try to upgrade
    "numpy==1.23.5",

    # HuggingFace — order enforced via uv resolver
    "huggingface-hub>=0.28.1,<0.30.0",
    "tokenizers==0.15.2",
    "transformers==4.39.2",
    "safetensors>=0.4.1",
    "accelerate==0.28.0",
    "diffusers==0.30.2",

    # PyTorch — index pinned via [tool.uv.sources] below
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",

    # TensorFlow
    "tensorflow==2.12.0",
    "tensorboard==2.12.0",

    # Vision / Audio / ML
    "opencv-python==4.9.0.80",
    "soundfile==0.12.1",
    "librosa==0.11.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    "einops==0.8.1",

    # Media / IO
    "imageio[ffmpeg]",
    "ffmpeg-python",
    "moviepy==1.0.3",
    "omegaconf",
    "gdown",
    "requests",

    # Live Avatar pipeline
    "flask>=3.0.0",
    "loguru>=0.7.0",
    "kokoro>=0.9.2",
    "gradio==5.24.0",

    # OpenMIM — needed to run setup_mmlab.sh after uv sync
    "openmim",
]

[tool.uv.sources]
torch     = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio  = { index = "pytorch-cu118" }

[[tool.uv.index]]
name     = "pytorch-cu118"
url      = "https://download.pytorch.org/whl/cu118"
explicit = true